# chesshs

./: Chess.hs  ChessTest.hs  LICENSE  PGN.hs  PGNTest.hs  README.md  bugs  chesshs.cabal  testgame.pgn
Chess/: FEN.hs  PGN.hs
