Name:                chesshs
Version:             0.1
Synopsis:            Simple library for validating chess moves
License:             BSD3
License-file:        LICENSE
Author:              Arno van Lumig
Maintainer:          arnovanlumig@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:    Chess

  Build-depends:
    base >= 4 && < 5,
    containers >= 0.4,
    haskell98